--- a/index.html
+++ b/index.html
@@ -1,13 +1,344 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Roberto Manfreda</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
-<body>
-  <app-root></app-root>
-<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.210c4fd429fbd616609f.js" type="module"></script><script src="main-es5.210c4fd429fbd616609f.js" nomodule defer></script></body>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Roberto Manfreda - Portfolio</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
+
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
+</head>
+
+<body id="page-top">
+
+  <!-- ======= Header/ Navbar ======= -->
+  <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll" href="#page-top"><img src="assets/img/LOGO-TEST.png" alt=""></a>
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
+        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link js-scroll active" href="#about">ABOUT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="#service">PROJECTS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="#contact">CONTACT</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- ======= Intro Section ======= -->
+  <main id="main">
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about-mf">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="box-shadow-full">
+              <div class="about-me pt-4 pt-md-0">
+                <div class="section-title">
+                  <h2>About</h2>
+                  <p>Learn more about me</p>
+                </div>
+                <p class="lead">
+                  My name is Roberto.
+                  I'm passionate about programming, computer security and hacking. I work as a computer developer and in
+                  my spare time I enjoy programming, discovering and experimenting.
+                  The technologies I work with most frequently are: Java, Spring Boot, Angular, BASH, Docker and
+                  Android.
+                  I love Linux systems, I like MacOs and I use Windows to play Call Of Duty and World of Warcraft!
+                </p>
+                <p class="lead">
+                  This is my site, you will find some resources that may be useful to you, I like to share my knowledge.
+                  I'm not a graduate, I learned a lot of my knowledge on the web thanks to sites like StackOverflow,
+                  GitHub, Wikipedia and other blogs of people like me (who want to share without any price).
+                  I see on the internet an immense source of knowledge, one of the most complex human creations that
+                  gives us an enormous source of
+                  FREE KNOWLEDGE.
+                </p>
+                <p class="lead">
+                  This is my site, you will find some resources that may be useful to you, I like to share my knowledge.
+                  I'm not a graduate, I learned a lot of my knowledge on the web thanks to sites like StackOverflow,
+                  GitHub, Wikipedia and other blogs of people like me (who want to share without any price).
+                  I see on the internet an immense source of knowledge, one of the most complex human creations that
+                  gives us an enormous source of
+                  FREE KNOWLEDGE.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section><!-- End About Section -->
+
+    <!-- ======= Services ======= -->
+    <section id="service">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="box-shadow-full">
+                <div class="section-title">
+                  <h2>resources</h2>
+                  <p>My open source projects</p>
+                </div>
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="service-box">
+                      <div class="service-ico">
+                        <span class="ico-circle"><i class="ion-code-working"></i></span>
+                      </div>
+                      <div class="service-content">
+                        <h2 class="s-title">Sproxy</h2>
+                        <p class="s-description text-center">
+                          Sproxy is a real proxy, it captures the requests and forwards them to the requested url.
+                        </p>
+                        <div class="text-center">
+                          <a href="https://github.com/robertomanfreda/sproxy"><button type="button" class="button">VIEW ON GITHUB</button></a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="service-box">
+                      <div class="service-ico">
+                        <span class="ico-circle"><i class="ion-code-working"></i></span>
+                      </div>
+                      <div class="service-content">
+                        <h2 class="s-title">SSH Notifier</h2>
+                        <p class="s-description text-center">
+                          A linux daemon to notify (and eventually grant/deny) ssh accesses via mail.
+                        </p>
+                        <div class="text-center">
+                          <a href="https://github.com/robertomanfreda/ssh-notifier-daemon"><button type="button" class="button">VIEW ON GITHUB</button></a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="service-box">
+                      <div class="service-ico">
+                        <span class="ico-circle"><i class="ion-code-working"></i></span>
+                      </div>
+                      <div class="service-content">
+                        <h2 class="s-title">RLogger</h2>
+                        <p class="s-description text-center">
+                          RLogger is a logging library that allows you to easily obfuscate and manipulate sensitive data.
+                        </p>
+                        <div class="text-center">
+                          <a href="https://github.com/robertomanfreda/rlogger"><button type="button" class="button">VIEW ON GITHUB</button></a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="service-box">
+                      <div class="service-ico">
+                        <span class="ico-circle"><i class="ion-code-working"></i></span>
+                      </div>
+                      <div class="service-content">
+                        <h2 class="s-title">Sproxy</h2>
+                        <p class="s-description text-center">
+                          Sproxy is a real proxy, it captures the requests and forwards them to the requested url.
+                        </p>
+                        <div class="text-center">
+                          <a href="https://github.com/robertomanfreda/sproxy"><button type="button" class="button">VIEW ON GITHUB</button></a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="service-box">
+                      <div class="service-ico">
+                        <span class="ico-circle"><i class="ion-code-working"></i></span>
+                      </div>
+                      <div class="service-content">
+                        <h2 class="s-title">SSH Notifier</h2>
+                        <p class="s-description text-center">
+                          A linux daemon to notify (and eventually grant/deny) ssh accesses via mail.
+                        </p>
+                        <div class="text-center">
+                          <a href="https://github.com/robertomanfreda/ssh-notifier-daemon"><button type="button" class="button">VIEW ON GITHUB</button></a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="service-box">
+                      <div class="service-ico">
+                        <span class="ico-circle"><i class="ion-code-working"></i></span>
+                      </div>
+                      <div class="service-content">
+                        <h2 class="s-title">RLogger</h2>
+                        <p class="s-description text-center">
+                          RLogger is a logging library that allows you to easily obfuscate and manipulate sensitive data.
+                        </p>
+                        <div class="text-center">
+                          <a href="https://github.com/robertomanfreda/rlogger"><button type="button" class="button">VIEW ON GITHUB</button></a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Services Section -->
+
+    
+    <!-- ======= Interest ======= -->
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="interests box-shadow-full">
+              <div class="about-me pt-4 pt-md-0">
+                <div class="section-title">
+                  <h2>interests</h2>
+                  <p>learning resources</p>
+                </div>
+                <div class="row">
+                  <div class="col-lg-3 col-md-4">
+                    <div class="icon-box">
+                      <img src="assets/img/java.png" alt="">
+                      <h3>Java</h3>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+                    <div class="icon-box">
+                      <img src="assets/img/spring-boot.png" alt="">
+                      <h3>Spring Boot</h3>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+                    <div class="icon-box">
+                      <img src="assets/img/bash.png" alt="">
+                      <h3>Bash</h3>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+                    <div class="icon-box">
+                      <img src="assets/img/docker.png" alt="">
+                      <h3>Docker</h3>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Interest Section -->
+
+
+    <!-- ======= Contact Section ======= -->
+    <section class="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="contact-mf">
+              <div id="contact" class="box-shadow-full">
+                  <div class="section-title">
+                    <h2>Contact</h2>
+                    <p>Contact Me</p>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6 d-flex align-items-stretch">
+                      <div class="info-box">
+                        <i class="bx bx-envelope"></i>
+                        <h3>My Email</h3>
+                        <p>contact@example.co</p>
+                      </div>
+                    </div>
+                    <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
+                      <div class="info-box">
+                        <i class="bx bx-share-alt"></i>
+                        <h3>Social Profiles</h3>
+                        <div class="social-links">
+                          <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
+                          <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
+                          <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
+                          <a href="#" class="google-plus"><i class="icofont-skype"></i></a>
+                          <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+                        </div>
+                      </div>
+                    </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Contact Section -->
+
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="copyright-box">
+            <p class="copyright">&copy; Copyright <strong>Roberto Manfreda</strong>. All Rights Reserved</p>
+            <div class="credits">
+              Designed by Roberto Manfreda</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer><!-- End  Footer -->
+
+  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+  <div id="preloader"></div>
+
+  <!-- Vendor JS Files -->
+  <script>
+      var elementToChange = document.getElementsByTagName("html")[0]; elementToChange.style.cursor = "url('assets/img/puntatore.png'), auto"; 
+  </script>
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="assets/vendor/counterup/jquery.counterup.min.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
