--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="https://github.com/robertomanfreda/robertomanfreda.github.io.git/assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon.png" rel="icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -20,16 +20,16 @@
 
 
   <!-- Vendor CSS Files -->
-  <link href="https://github.com/robertomanfreda/robertomanfreda.github.io.git/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://github.com/robertomanfreda/robertomanfreda.github.io.git/assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="https://github.com/robertomanfreda/robertomanfreda.github.io.git/assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="https://github.com/robertomanfreda/robertomanfreda.github.io.git/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="https://github.com/robertomanfreda/robertomanfreda.github.io.git/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
 
-  <link href="https://github.com/robertomanfreda/robertomanfreda.github.io.git/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="https://github.com/robertomanfreda/robertomanfreda.github.io.git/assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
 
@@ -331,13 +331,13 @@
   <script>
       var elementToChange = document.getElementsByTagName("html")[0]; elementToChange.style.cursor = "url('assets/img/puntatore.png'), auto"; 
   </script>
-  <script src="https://github.com/robertomanfreda/robertomanfreda.github.io.git/assets/vendor/jquery/jquery.min.js"></script>
-  <script src="https://github.com/robertomanfreda/robertomanfreda.github.io.git/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="https://github.com/robertomanfreda/robertomanfreda.github.io.git/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="https://github.com/robertomanfreda/robertomanfreda.github.io.git/assets/vendor/counterup/jquery.counterup.min.js"></script>
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="assets/vendor/counterup/jquery.counterup.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="https://github.com/robertomanfreda/robertomanfreda.github.io.git/assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 
