updated links and resources

--- a/index.html
+++ b/index.html
@@ -73,42 +73,23 @@
                         <div class="about-me pt-4 pt-md-0">
                             <div class="section-title">
                                 <h2>About</h2>
-                                <p>Learn more about me</p>
+                                <p>Whoami</p>
                             </div>
                             <p class="lead">
-                                My name is Roberto.
-                                I'm passionate about programming, computer security and hacking. I work as a computer
-                                developer and in
-                                my spare time I enjoy programming, discovering and experimenting.
+                                I'm passionate about programming, infosec and hacking.<br>
+                                I work as a computer developer and in my spare time I enjoy programming,
+                                discovering and experimenting.<br>
                                 The technologies I work with most frequently are: Java, Spring Boot, Angular, BASH,
-                                Docker and
-                                Android.
-                                I love Linux systems, I like MacOs and I use Windows to play Call Of Duty and World of
-                                Warcraft!
+                                Docker and Android.<br>
+                                I love Linux systems.<br>
                             </p>
                             <p class="lead">
-                                This is my site, you will find some resources that may be useful to you, I like to share
-                                my knowledge.
                                 I'm not a graduate, I learned a lot of my knowledge on the web thanks to sites like
                                 StackOverflow,
                                 GitHub, Wikipedia and other blogs of people like me (who want to share without any
-                                price).
+                                price).<br>
                                 I see on the internet an immense source of knowledge, one of the most complex human
-                                creations that
-                                gives us an enormous source of
-                                FREE KNOWLEDGE.
-                            </p>
-                            <p class="lead">
-                                This is my site, you will find some resources that may be useful to you, I like to share
-                                my knowledge.
-                                I'm not a graduate, I learned a lot of my knowledge on the web thanks to sites like
-                                StackOverflow,
-                                GitHub, Wikipedia and other blogs of people like me (who want to share without any
-                                price).
-                                I see on the internet an immense source of knowledge, one of the most complex human
-                                creations that
-                                gives us an enormous source of
-                                FREE KNOWLEDGE.
+                                creations that gives us an enormous source of free knowledge.
                             </p>
                         </div>
                     </div>
@@ -126,7 +107,7 @@
                     <div class="box-shadow-full">
                         <div class="section-title">
                             <h2>resources</h2>
-                            <p>My open source projects</p>
+                            <p>Some of my open source projects</p>
                         </div>
                         <div class="row">
                             <div class="col-md-4">
@@ -135,43 +116,6 @@
                                         <span class="ico-circle"><i class="ion-code-working"></i></span>
                                     </div>
                                     <div class="service-content">
-                                        <h2 class="s-title">Sproxy</h2>
-                                        <p class="s-description text-center">
-                                            Sproxy is a real proxy, it captures the requests and forwards them to the
-                                            requested url.
-                                        </p>
-                                        <div class="text-center">
-                                            <a href="https://github.com/robertomanfreda/sproxy">
-                                                <button type="button" class="button">VIEW ON GITHUB</button>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="service-box">
-                                    <div class="service-ico">
-                                        <span class="ico-circle"><i class="ion-code-working"></i></span>
-                                    </div>
-                                    <div class="service-content">
-                                        <h2 class="s-title">SSH Notifier</h2>
-                                        <p class="s-description text-center">
-                                            A linux daemon to notify (and eventually grant/deny) ssh accesses via mail.
-                                        </p>
-                                        <div class="text-center">
-                                            <a href="https://github.com/robertomanfreda/ssh-notifier-daemon">
-                                                <button type="button" class="button">VIEW ON GITHUB</button>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="service-box">
-                                    <div class="service-ico">
-                                        <span class="ico-circle"><i class="ion-code-working"></i></span>
-                                    </div>
-                                    <div class="service-content">
                                         <h2 class="s-title">RLogger</h2>
                                         <p class="s-description text-center">
                                             RLogger is a logging library that allows you to easily obfuscate and
@@ -191,6 +135,25 @@
                                         <span class="ico-circle"><i class="ion-code-working"></i></span>
                                     </div>
                                     <div class="service-content">
+                                        <h2 class="s-title">RMorphing</h2>
+                                        <p class="s-description text-center">
+                                            A Python based repository - facial recognition
+                                            and morphing with python-opencv.
+                                        </p>
+                                        <div class="text-center">
+                                            <a href="https://github.com/robertomanfreda/rmorphing">
+                                                <button type="button" class="button">VIEW ON GITHUB</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="service-box">
+                                    <div class="service-ico">
+                                        <span class="ico-circle"><i class="ion-code-working"></i></span>
+                                    </div>
+                                    <div class="service-content">
                                         <h2 class="s-title">Sproxy</h2>
                                         <p class="s-description text-center">
                                             Sproxy is a real proxy, it captures the requests and forwards them to the
@@ -210,12 +173,13 @@
                                         <span class="ico-circle"><i class="ion-code-working"></i></span>
                                     </div>
                                     <div class="service-content">
-                                        <h2 class="s-title">SSH Notifier</h2>
+                                        <h2 class="s-title">Developer Cheatsheet</h2>
                                         <p class="s-description text-center">
-                                            A linux daemon to notify (and eventually grant/deny) ssh accesses via mail.
+                                            Just another useful set of commands for &#128039 developers.
+                                            <br><br>
                                         </p>
                                         <div class="text-center">
-                                            <a href="https://github.com/robertomanfreda/ssh-notifier-daemon">
+                                            <a href="https://github.com/robertomanfreda/developer-cheatsheet">
                                                 <button type="button" class="button">VIEW ON GITHUB</button>
                                             </a>
                                         </div>
@@ -228,13 +192,32 @@
                                         <span class="ico-circle"><i class="ion-code-working"></i></span>
                                     </div>
                                     <div class="service-content">
-                                        <h2 class="s-title">RLogger</h2>
+                                        <h2 class="s-title">SQLInjector</h2>
                                         <p class="s-description text-center">
-                                            RLogger is a logging library that allows you to easily obfuscate and
-                                            manipulate sensitive data.
+                                            A Mozilla Firefox extension to inject sql payloads on every "input" tags.
+                                            <br><br>
                                         </p>
                                         <div class="text-center">
-                                            <a href="https://github.com/robertomanfreda/rlogger">
+                                            <a href="https://github.com/robertomanfreda/sqlinjector">
+                                                <button type="button" class="button">VIEW ON GITHUB</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="service-box">
+                                    <div class="service-ico">
+                                        <span class="ico-circle"><i class="ion-code-working"></i></span>
+                                    </div>
+                                    <div class="service-content">
+                                        <h2 class="s-title">Abusing SUID</h2>
+                                        <p class="s-description text-center">
+                                            A tool to detect vulnerable SUIDs on any machine.
+                                            <br><br>
+                                        </p>
+                                        <div class="text-center">
+                                            <a href="https://github.com/robertomanfreda/abusing-suid">
                                                 <button type="button" class="button">VIEW ON GITHUB</button>
                                             </a>
                                         </div>
@@ -257,8 +240,8 @@
                     <div class="interests box-shadow-full">
                         <div class="about-me pt-4 pt-md-0">
                             <div class="section-title">
-                                <h2>interests</h2>
-                                <p>learning resources</p>
+                                <h2>Technologies</h2>
+                                <p>Main interests</p>
                             </div>
                             <div class="row">
                                 <div class="col-lg-3 col-md-4">
@@ -310,19 +293,21 @@
                                     <div class="info-box">
                                         <i class="bx bx-envelope"></i>
                                         <h3>My Email</h3>
-                                        <p>contact@example.co</p>
+                                        <p>robertomanfreda1994@gmail.com</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
                                     <div class="info-box">
                                         <i class="bx bx-share-alt"></i>
-                                        <h3>Social Profiles</h3>
+                                        <h3>Profiles</h3>
                                         <div class="social-links">
-                                            <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-                                            <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-                                            <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-                                            <a href="#" class="google-plus"><i class="icofont-skype"></i></a>
-                                            <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+                                            <!--a href="#" class="twitter"><i class="icofont-twitter"></i></a-->
+                                            <!--a href="#" class="facebook"><i class="icofont-facebook"></i></a-->
+                                            <!--a href="#" class="instagram"><i class="icofont-instagram"></i></a-->
+                                            <!--a href="#" class="google-plus"><i class="icofont-skype"></i></a-->
+                                            <a href="https://www.linkedin.com/in/roberto-manfreda/"><i class="icofont-linkedin"></i></a>
+                                            <a href="https://github.com/robertomanfreda"><i class="icofont-github"></i></a>
+                                            <a href="https://stackoverflow.com/users/9935369/roberto-manfreda?tab=profile"><i class="icofont-stack-overflow"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -343,7 +328,7 @@
                 <div class="copyright-box">
                     <p class="copyright">&copy; Copyright <strong>Roberto Manfreda</strong>. All Rights Reserved</p>
                     <div class="credits">
-                        Designed by Roberto Manfreda</a>
+                        Designed by <a href="https://www.ipersito.it/myportfolio">Emanuel Lotito</a>
                     </div>
                 </div>
             </div>
