--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-            href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-            rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+          rel="stylesheet">
 
 
     <!-- Vendor CSS Files -->
@@ -301,13 +300,17 @@
                                         <i class="bx bx-share-alt"></i>
                                         <h3>Profiles</h3>
                                         <div class="social-links">
-                                            <!--a href="#" class="twitter"><i class="icofont-twitter"></i></a-->
-                                            <!--a href="#" class="facebook"><i class="icofont-facebook"></i></a-->
-                                            <!--a href="#" class="instagram"><i class="icofont-instagram"></i></a-->
-                                            <!--a href="#" class="google-plus"><i class="icofont-skype"></i></a-->
-                                            <a href="https://www.linkedin.com/in/roberto-manfreda/"><i class="icofont-linkedin"></i></a>
-                                            <a href="https://github.com/robertomanfreda"><i class="icofont-github"></i></a>
-                                            <a href="https://stackoverflow.com/users/9935369/roberto-manfreda?tab=profile"><i class="icofont-stack-overflow"></i></a>
+                                            <a href="https://www.linkedin.com/in/roberto-manfreda/">
+                                                <i class="icofont-linkedin"></i>
+                                            </a>
+
+                                            <a href="https://github.com/robertomanfreda">
+                                                <i class="icofont-github"></i>
+                                            </a>
+
+                                            <a href="https://stackoverflow.com/users/9935369/roberto-manfreda?tab=profile">
+                                                <i class="icofont-stack-overflow"></i>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -328,7 +331,7 @@
                 <div class="copyright-box">
                     <p class="copyright">&copy; Copyright <strong>Roberto Manfreda</strong>. All Rights Reserved</p>
                     <div class="credits">
-                        Designed by <a href="https://www.ipersito.it/myportfolio">Emanuel Lotito</a>
+                        Designed by <a href="https://www.ipersito.it/myportfolio"><strong>Emanuel Lotito</strong></a>
                     </div>
                 </div>
             </div>
