updated links and resources

--- a/index.html
+++ b/index.html
@@ -76,18 +76,18 @@
                             </div>
                             <p class="lead">
                                 I'm passionate about programming, infosec and hacking.<br>
-                                I work as a computer developer and in my spare time I enjoy programming,
-                                discovering and experimenting.<br>
-                                The technologies I work with most frequently are: Java, Spring Boot, Angular, BASH,
-                                Docker and Android.<br>
-                                I love Linux systems.<br>
+                            </p>
+                            <p class="lead"
+                                Currently working as software developer @ Alten Italia and in my spare time I enjoy
+                                programming, discovering and experimenting.<br>
                             </p>
                             <p class="lead">
-                                I'm not a graduate, I learned a lot of my knowledge on the web thanks to sites like
-                                StackOverflow,
-                                GitHub, Wikipedia and other blogs of people like me (who want to share without any
-                                price).<br>
-                                I see on the internet an immense source of knowledge, one of the most complex human
+                                I'm not a graduate, I learned a lot of my knowledge on the web thanks to
+                                StackOverflow, GitHub, Wikipedia and blogs of people like me (who want to share without
+                                any price).
+                            </p>
+                            <p class="lead">
+                                The internet is an immense resource, one of the most complex human
                                 creations that gives us an enormous source of free knowledge.
                             </p>
                         </div>
@@ -257,14 +257,41 @@
                                 </div>
                                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                                     <div class="icon-box">
-                                        <img src="assets/img/bash.png" alt="">
-                                        <h3>Bash</h3>
+                                        <img src="assets/img/android.png" alt="">
+                                        <h3>Android</h3>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
                                     <div class="icon-box">
+                                        <img src="assets/img/bash.png" alt="">
+                                        <h3>BASH</h3>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row" style="margin-top: 20px">
+                                <div class="col-lg-3 col-md-4">
+                                    <div class="icon-box">
+                                        <img src="assets/img/linux.png" alt="">
+                                        <h3>Linux</h3>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+                                    <div class="icon-box">
                                         <img src="assets/img/docker.png" alt="">
                                         <h3>Docker</h3>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+                                    <div class="icon-box">
+                                        <img src="assets/img/kubernetes.png" alt="">
+                                        <h3>Kubernetes</h3>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+                                    <div class="icon-box">
+                                        <img src="assets/img/jenkins.png" alt="">
+                                        <h3>Jenkins</h3>
                                     </div>
                                 </div>
                             </div>
